# Qt_Skripte

Programmier_übung/: CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  cppTest.pro  main.cpp  mystring.cpp  mystring.h
